# dj-test

./: README.md
my_django/: pyproject.toml
my_django/notes/notes/: settings.py
