[tool.poetry]
name = "my-django"
version = "0.1.0"
description = ""
authors = ["kostiantyn liapkalo <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "my_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
fastapi = "^0.96.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
